2005-03-22  Marc Singer  <elf@buici.com>

	* src/apex/env.c (_s): Fixed references to CONFIG_ macros that may
	already be quoted.

2005-03-20  Marc Singer  <elf@buici.com>

	* src/mach-lh7a40x/initialize.c (__section): initializing the SMC
	control so that flash works correctly. 

	* Makefile (SUBLEVEL): Fixed the reset of the config hooks so that
	the build is now optimal with respect to the configuration.

	* Fixed menuconfig.  Still, I've never been able to edit strings,
	hex's, or int's in menuconfig. It's there for the folks who want it.

	* Makefile (SUBLEVEL): Rolling revision for integration of new
	configuration support.  This is a big deal because it means that
	configurations are easier to build and more robust.

	* scripts/configtoh: Stripping the quotes from config options.
	We're using the kernel configurator, so we have less control over
	the user's actions.  This may prove to be overly zealous in
	situations where the configuration option needs quotes.
	...Now it is really fixed.  Needed it and there was no way around it.

2005-03-17  Marc Singer  <elf@buici.com>

	* src/mach-lh7a40x/cpuinfo.c (cpuinfo_report): Fixed the CPUID
	reporting for the lh7a404.

	* src/mach-lh7a40x/initialize.c: Added hack to the lpd7a40x
	initialization to enable PCMCIA.  May be a work-around for a NOR
	flash problem.
 
	* src/drivers/drv-nor-cfi.c (nor_read): Eliminated (most)
	references to nor chip length except when necessary.

2005-03-16  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/timer-lh79520.c (lh79520_timer_init): Fixed the
	initialization of the boot loader timer.

	* src/mach-lh7952x/lpd79520_config (CONFIG_NOR_BANK0_START): Fixed
	the starting address of the NOR flash so that the REMAP register
	doesn't make a difference.

	* src/apex/cmd-boot.c: Making sure that the ATAG pointer is valid.

2005-03-15  Marc Singer  <elf@buici.com>

	* src/arch-arm/entry/apex.lds.S: Added new START identifier for
	the sake of the memory scan function.
