@@ -29,7 +29,7 @@ obj-$(CONFIG_MACH_KEV79524)     += init-kev79524.o timer-lh79524.o
 obj-$(CONFIG_INTERRUPTS)	+= exception_vectors.o
 obj-$(CONFIG_DRIVER_NAND)	+= drv-nand.o
 obj-$(CONFIG_DRIVER_CPLD_SPI)	+= drv-cpld-spi.o
-obj-$(CONFIG_DRIVER_EMAC)	+= drv-emac.o
+obj-$(CONFIG_DRIVER_EMAC_LH79524) += drv-emac.o
 obj-$(CONFIG_RELOCATE_NAND)	+= relocate-nand.o
 obj-$(CONFIG_CLCDC)		+= clcdc.o
 obj-$(CONFIG_CODEC)		+= codec.o
